# OptimusAI

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  alembic.ini  pyproject.toml  ruff.toml
admin-vite/: index.html  package.json  vite.config.ts
admin-vite/src/: index.css  main.tsx
alembic/: env.py
alembic/versions/: fb8766ea7067_initial_schema.py
app/: config.py  main.py
app/agents/: analytics_agent.py  base.py  coach.py  commerce.py  concierge.py  copywriter.py  critic.py  customer_memory.py  default_design_dna.py  design_analyzer.py  escalation.py  followup.py  image_gen.py  moderator.py  orchestrator.py  output_parser.py  poster.py  registry.py  sales.py  schemas.py  sentiment.py  social_reply.py  story.py  strategist.py  support.py  timing.py  trend_surfer.py
app/api/: deps.py
app/connectors/: base.py  facebook.py  whatsapp.py
app/core/: admin_auth.py  auth.py  channel_config.py  constants.py  database.py  events.py  exceptions.py  logging.py  middleware.py  pagination.py  permissions.py  queue.py  rate_limit.py  redis.py  security.py  storage.py  websocket.py
app/integrations/: audio.py  embeddings.py  image_gen.py  llm.py  (+3 more)
deployments/: Dockerfile  Dockerfile.worker  docker-compose.yml
docs/: 00-PRODUCT-FRAMING.md  01-ARCHITECTURE.md  02-AGENTS.md  03-DATA-MODEL.md  04-BUSINESS-FLOWS.md  05-API-DESIGN.md  06-CONNECTORS.md  07-AI-STRATEGY.md  08-SECURITY.md  09-MONETIZATION.md  10-ROADMAP.md
frontend-vite/: index.html  package.json  tailwind.config.js  vite.config.ts
scripts/: setup_comfyui.sh
tests/: conftest.py
(+173 files in other folders)
